--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <title>SAV Connect</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="https://kit.fontawesome.com/539210050b.js" crossorigin="anonymous"></script>
   </body>
 </html>
